Fixed the words not wrapping and thus the navigation menu does not mix up the whole page

--- a/Responsive-Web-Design/Applied-Responsive-Web-Design-Projects/05-Build-a-Technical-Documentation-Page/css/style.css
+++ b/Responsive-Web-Design/Applied-Responsive-Web-Design-Projects/05-Build-a-Technical-Documentation-Page/css/style.css
@@ -7,14 +7,17 @@ body {
   overflow-wrap: break-word;
 }
 img {
-  max-width: 100%;
-  height: auto;
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
 }
-}
-pre {
+pre  {
   background: #B3D4FC;
   padding: 1.3rem 1rem 1.3rem 0.5rem;
   border-left: 5px solid blue;  /* Internet Explorer 5.5+ */
+  white-space: pre-wrap;       /* css-3 */
+  white-space: pre-wrap;
+  word-wrap: break-word;       /* Internet Explorer 5.5+ */
 }
 code {
     background: #B3D4FC;
@@ -23,6 +26,8 @@ code {
     word-break: normal;
     word-wrap: normal;
     line-height: 2;
+    white-space: pre-wrap;
+    word-wrap: break-word;
 }
 .note {
   background: #FFF3D4;
@@ -32,23 +37,9 @@ code {
 input {
   margin-left: 1rem;
 }
-div {
-  display: flex;
-  width: 100%;
-  padding: 0;
-  margin: 0;
-}
 #main-doc {
-  /* position: absolute;
-  margin-left:310px; */
-  /* margin-left: 310px; */
-  border-left: 3px solid rgba(0,22,22,0.4);
-  margin-left: 300px;
-  position: absolute;
-  padding:20px;
-  width: 100%;
-  display: flex;
-  flex-flow: column wrap;
+  /* clear: left; */
+  padding-left: 310px;
 }
 .header-nav {
   box-sizing: border-box;
@@ -57,7 +48,12 @@ div {
   display: flex;
   flex-flow: column wrap;
   width: 300px;
+  height: 100%;
   line-height: 1.5;
+  border-right: 3px solid gray;
+  background: rgba(0, 0, 0, 0.1);
+  position: fixed;
+  min-width: 300px;
 }
 h1 {
   padding: 0 0.5rem 0 0;
@@ -80,9 +76,7 @@ h1 {
   color: rgb(77, 78, 83);
   border-bottom: 1px solid;
 }
-#navbar {
-  position:fixed;
-}
+
 li a {
   color: black;
   text-decoration: none;
